--- a/index.html
+++ b/index.html
@@ -158,12 +158,15 @@
 							<h1 class="py-4 py-md-5 text-white">My Projects</h1>
 
 							<div class="d-grid d-flex row px-lg-2 px-md-0 mx-auto  gap-4 col-12 justify-content-center text-white ">
-								<div class="col-lg-3 col-md-3 border" id="ecommerceAPI">
+								<a href="https://documenter.getpostman.com/view/46125437/2sB34ZrQ9e">
+									<div class="col-lg-3 col-md-3 border" id="ecommerceAPI">
 									<img src=".\assets\projects\ecommerceAPI.jpg">
-									<a href="https://documenter.getpostman.com/view/46125437/2sB34ZrQ9e"></a><h3>E-commerce API Documentation</h3></a>
+									<h3>E-commerce API Documentation</h3>
 									<p class="p-3">Dynamic E-Commerc bordere Workflow Management. The system features dynamic routes for order processing, real-time inventory updates, and secure user authentcation. it also supports seamleass automated order reporting and comprehensive product management. Documented Backend API published publicly using Postman.</p>
 
 								</div>
+
+							</a>
 
 
 								<div class="col-lg-3 col-md-3  border" id="bookingAPI">
